--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'org.apache.logging.log4j:log4j-core:2.5'
+    compile 'org.slf4j:slf4j-api:1.7.13'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.6.4'
     testCompile 'junit:junit:4.12'
 }
